--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@types/react-dom": "18.0.10",
     "axios": "^1.2.2",
     "firebase": "^9.17.1",
+    "firebase-tools": "^11.22.0",
     "next": "13.1.2",
     "nprogress": "^0.2.0",
     "react": "18.2.0",
