--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@auth0/nextjs-auth0": "^2.2.1",
     "@next/font": "13.1.2",
     "@types/auth0": "^2.35.9",
+    "@types/js-cookie": "^3.0.2",
     "@types/node": "18.11.18",
     "@types/nprogress": "^0.2.0",
     "@types/react": "18.0.26",
@@ -19,6 +20,7 @@
     "axios": "^1.2.2",
     "firebase": "^9.17.1",
     "firebase-tools": "^11.22.0",
+    "js-cookie": "^3.0.1",
     "next": "13.1.2",
     "nprogress": "^0.2.0",
     "react": "18.2.0",
