--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.43.1",
+    "react-simple-star-rating": "^5.1.7",
     "react-toastify": "^9.1.1",
     "typescript": "4.9.4",
     "zustand": "^4.3.2"
